[gd_scene load_steps=6 format=3 uid="uid://f2dqpk6p7q00"]

[ext_resource type="Script" uid="uid://cyagpxacudnwm" path="res://scripts/telas/tela_records.gd" id="1_wn400"]
[ext_resource type="LabelSettings" uid="uid://da58mpv4dmmmx" path="res://tres/titulo.tres" id="2_fq3dt"]
[ext_resource type="Theme" uid="uid://cgeeiqcn1fcru" path="res://tres/botao.tres" id="3_5wib7"]
[ext_resource type="AudioStream" uid="uid://bvf1fais7juh" path="res://assets/audios/mouse_click.mp3" id="4_wew5o"]
[ext_resource type="AudioStream" uid="uid://b4di5lkxxgs5r" path="res://assets/audios/mouse_hover.mp3" id="5_6or8k"]

[node name="TelaRecords" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wn400")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1160.0
offset_bottom = 647.0
color = Color(0, 0, 0, 1)

[node name="Titulo" type="Label" parent="."]
layout_mode = 0
offset_left = 396.0
offset_top = 24.0
offset_right = 850.0
offset_bottom = 161.0
scale = Vector2(0.8, 0.8)
text = "RECORDS"
label_settings = ExtResource("2_fq3dt")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 181.0
offset_right = 170.0
offset_bottom = 221.0

[node name="Sair" type="Button" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 580.0
offset_right = 135.0
offset_bottom = 645.0
scale = Vector2(0.8, 0.8)
theme = ExtResource("3_5wib7")
text = "Sair"

[node name="Reset" type="Button" parent="."]
layout_mode = 0
offset_left = 905.0
offset_top = 13.0
offset_right = 1205.0
offset_bottom = 72.0
scale = Vector2(0.8, 0.8)
theme = ExtResource("3_5wib7")
text = "Resetar Records"

[node name="JogarNovamente" type="Button" parent="."]
layout_mode = 0
offset_left = 884.0
offset_top = 587.0
offset_right = 1208.0
offset_bottom = 646.0
scale = Vector2(0.8, 0.8)
theme = ExtResource("3_5wib7")
text = "Jogar Novamente"

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_wew5o")
bus = &"SFX"

[node name="Hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_6or8k")
bus = &"SFX"

[connection signal="mouse_entered" from="Sair" to="." method="_on_sair_mouse_entered"]
[connection signal="pressed" from="Sair" to="." method="_on_sair_pressed"]
[connection signal="mouse_entered" from="Reset" to="." method="_on_reset_mouse_entered"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
[connection signal="mouse_entered" from="JogarNovamente" to="." method="_on_jogar_novamente_mouse_entered"]
[connection signal="pressed" from="JogarNovamente" to="." method="_on_jogar_novamente_pressed"]
